--- a/CSS/style.css
+++ b/CSS/style.css
@@ -26,13 +26,13 @@
     width: 100%;
     height: 100%;
     /* background-color: rgba(0, 0, 0, 0.4);  */
-    z-index: 1; /* Ensure it appears above the background image */
+    z-index: 1;
 }
 
-.main-content > * {
-    position: relative; /* Ensure content appears above the overlay */
+/* .main-content > * {
+    position: relative; 
     z-index: 2;
-}
+} */
 
 body {
     margin: 0;
@@ -151,9 +151,9 @@ header ul {
     width: 100%;
     max-height: 0px;
     overflow: hidden;
-    /* position: absolute;  */
-    /* z-index: 9998; */
+    z-index: 9000;
     cursor: pointer;
+    /* border: 1px dashed green; */
 }
 
 .showing {
@@ -180,6 +180,8 @@ header ul li a {
     font-size: 1.1em;
     text-decoration: none;
     border-radius: 5px;
+    position: relative;
+    pointer-events: auto;
 }
 
 header ul li a:hover {
@@ -194,7 +196,7 @@ header .menu-toggle {
     right: 20px;
     top: 34px;
     font-size: 1.9em;
-    /* z-index: 9999; */
+    /* z-index: 9998; */
     cursor: pointer;
 }
 
@@ -215,6 +217,7 @@ header .menu-toggle {
     list-style: none;
     padding: 0;
     margin: 0;
+    z-index: 10;
 }
 
 .center-btns li {
@@ -379,6 +382,8 @@ header .menu-toggle {
     width: 30%;
     float: left;
     /* border: 1px dashed green; */
+    z-index: 11;
+    position: relative;
 }
 
 .content .sidebar.single {
