--- a/CSS/style.css
+++ b/CSS/style.css
@@ -153,7 +153,9 @@ header ul {
     overflow: hidden;
     z-index: 9000;
     cursor: pointer;
-    /* border: 1px dashed green; */
+    margin-left: auto; /* Pushes the menu to the right */
+    padding-right: 10px; /* Adds spacing from the right edge */
+    text-align: right; /* Aligns the text inside the list to the right */
 }
 
 .showing {
@@ -171,7 +173,7 @@ header ul li:hover ul {
 header ul li ul {
     position: static;
     display: block;
-    width: 100%;
+    width: 50%;
 }
 /* The options in the menu-toggle */
 header ul li a {
@@ -181,7 +183,10 @@ header ul li a {
     text-decoration: none;
     border-radius: 5px;
     position: relative;
+    width: 250px; /* Shortens the width of the clickable area */
     pointer-events: auto;
+    text-align: right; /* Aligns the text inside the clickable area */
+    margin-left: auto; /* Pushes the clickable area to the right */
 }
 
 header ul li a:hover {
@@ -441,6 +446,15 @@ header .menu-toggle {
     }
 }
 
+@media (max-width: 800px) {
+    .content .sidebar {
+        display: none; /* Hides the sidebar */
+    }
+
+    .content .main-content {
+        width: 100%; /* Expands the main content to take up the full width */
+    }
+}
 
 @media (max-width: 1000px) {
     .footer .footer-content {
